# chatter

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
chatter/: app.py
chatter/models/: transcription.py
